--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Blankss - Bringing your designs to life!">
-    <title>Blankss</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Blankss - Bringing your designs to life!">
+  <title>Blankss | Bringing your designs to life</title>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to Blankss</h1>
-        <p>Bringing your designs to life!</p>
-    </header>
-    <main>
-        <section>
-            <h2>Start Designing</h2>
-            <p>Upload your design and preview it on t-shirts, hoodies, and more.</p>
-        </section>
-    </main>
-    <footer>
-        <p>Contact: blankssbq@gmail.com</p>
-    </footer>
-    <script src="assets/js/main.js"></script>
+  <header>
+    <h1>Blankss</h1>
+    <p>Bringing your designs to life!</p>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Products</a>
+      <a href="#">Upload</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <section class="intro">
+      <h2>Start Designing</h2>
+      <p>Upload your design and preview it on high-quality mockups like tees, hoodies, and mugs.</p>
+    </section>
+    <section class="upload">
+      <h2>Upload Your Design</h2>
+      <input type="file" accept="image/*" />
+    </section>
+    <section class="mockups">
+      <h2>Mockup Gallery</h2>
+      <p>Preview your uploaded designs on various products here.</p>
+      <div class="placeholder">[Mockup Preview Area]</div>
+    </section>
+  </main>
+  <footer>
+    <p>Contact us at: blankssbq@gmail.com</p>
+    <p>Follow us on IG: @blankssbq</p>
+  </footer>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
